--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
-# render.yaml - Configuration for deploying the F1 Dashboard Backend on Render
+# render.yaml - CORRECTED Configuration for deploying the F1 Dashboard Backend on Render
 
 services:
   # 1. The Web Service that runs the Flask API
@@ -7,7 +7,7 @@ services:
     env: python
     # All commands are run from the 'backend' directory
     rootDir: backend
-    plan: free
+    plan: free # This is correct for the web service
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app"
     healthCheckPath: /api/status
@@ -21,10 +21,9 @@ services:
     env: python
     # All commands are run from the 'backend' directory
     rootDir: backend
-    plan: free
-    # Schedule to run at 02:00 UTC every day. You can change this.
-    # Format is standard cron syntax.
-    schedule: "0 2 * * *"
+    # The "plan: free" line has been removed as it's not valid for cron jobs.
+    # Render will use available free tier resources automatically.
+    schedule: "0 2 * * *" # Schedule to run at 02:00 UTC every day
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python data_ingestor.py"
     envVars:
